--- a/projects/web/app/views/adm/HomeController/index.html
+++ b/projects/web/app/views/adm/HomeController/index.html
@@ -1,8 +1,14 @@
 
-#{extends '_layout/body_layout.html' /}
+#{extends 'CRUD/layout.html' /}
 
-<div class="side-body">
-    <h1> Welcome to BioNimbuZ! </h1>
-    <pre>  </pre>
-    <p style="font-size: 25px;">Select the menus available to start navigation.</p>
+
+<div class="row crud-title">
+    <h1 class="col-xs-12"> &{'application.welcome'} </h1>
+    <pre class="col-xs-12"> </pre>
+</div>
+
+<br>
+
+<div class="row" >
+    <p style="font-size: 20px;">&{'application.welcome.content'}</p>
 </div>
