--- a/projects/web/app/views/adm/PluginController/show.html
+++ b/projects/web/app/views/adm/PluginController/show.html
@@ -3,48 +3,40 @@
 #{set title:messages.get('crud.show.title', type.modelName) /}
 
 <div class="row crud-title">
-    <div class="">  
-        <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="row">
-                <h1> &{'crud.show.title', type.modelName} </h1>
-            </div>
-            
-            <div class="row">
-                <pre class="col-xs-12 col-sm-12 col-md-9"> &{'crud.show.title.desc', type.modelName} </pre>            
-                <input data-toggle="modal" data-target="#deleteModal" class="col-xs-12 col-sm-12 col-md-2 btn btn-danger pull-right" type="button" value="&{'crud.delete', type.modelName}" />
-            </div>
-        </div>
-    </div>
+    <h1 class="col-xs-12"> &{'crud.show.title', type.modelName} </h1>
+    <pre class="col-xs-12 col-sm-12 col-md-9"> &{'crud.show.title.desc', type.modelName} </pre>
+    <input data-toggle="modal" data-target="#deleteModal"
+        class="col-xs-12 col-sm-12 col-md-2 btn btn-danger pull-right" type="button" value="&{'crud.delete', type.modelName}" />
 </div>
 
 <br>
 
-<div class="row col-lg-12" >
+<div class="row" >
 #{form action:@save(object._key()), enctype:'multipart/form-data', class: 'submitForm'}
 
-    #{crud.form}    
-        #{crud.custom 'url'}        
-            #{field 'object.url'} 
-                <div class="form-group row ${field.errorClass ? 'has-error' : ''}">                
+    #{crud.form}
+        #{crud.custom 'url'}
+            #{field 'object.url'}
+                <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
                     <label class="col-xs-12 no-bootstrap-padding" for="${field.id}">&{field.name}</label>
                     <div class="row no-bootstrap-padding col-xs-12 col-sm-12 col-md-9">
                         <input class="form-control margin-bottom no-bootstrap-padding col-xs-12" id="${field.id}" name="${field.name}" value="${field.value}"  type="text" />
                         <span class="help-block">*&{'plugin.search.required'}</span>
                         #{ifError field.name}
                             <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
-                        #{/ifError} 
+                        #{/ifError}
                     </div>
-                    <button id="searchPluginButton" class="btn btn-primary pull-right margin-bottom no-bootstrap-padding col-xs-12 col-sm-12 col-md-2" 
-                                type="button">&{'crud.search'}</button>    
-                </div>                
+                    <button id="searchPluginButton" class="btn btn-primary pull-right margin-bottom no-bootstrap-padding col-xs-12 col-sm-12 col-md-2"
+                                type="button">&{'crud.search'}</button>
+                </div>
             #{/field}
         #{/crud.custom}
     #{/crud.form}
-    
-    <div class="btn-row text-center">        
+
+    <div class="btn-row text-center">
         <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_save" value="&{'crud.save', type.modelName}" />
         <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_saveAndContinue" value="&{'crud.saveAndContinue', type.modelName}" />
-        <a href="@{list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>     
+        <a href="@{list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>
     </div>
 #{/form}
 </div>
@@ -61,7 +53,7 @@
                 <p class="text-warning"><small>&{'modal.confirm.delete.desc'}</small></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>                
+                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>
                 #{form @delete(object._key()), style: 'display:inline;', class: 'submitForm'}
                     <button type="submit" class="btn btn-primary">&{'modal.button.confirm'}</button>
                 #{/form}
@@ -72,38 +64,38 @@
 
 #{set 'moreScripts' }
 <script type="text/javascript">
-$(function(){   
-   
+$(function(){
+
     function clearFields() {
         $('#object_name').val('');
         $('#object_pluginVersion').val('');
         $('#object_cloudType').val('');
         $('#object_authType').val('');
     }
-    
+
     $('#object_name').prop('readonly', true);
     $('#object_cloudType').prop('readonly', true);
     $('#object_pluginVersion').prop('readonly', true);
     $('#object_authType').prop('tabindex', -1);
     $('#object_authType').attr('readonly', 'readonly');
-    
+
     $('#object_url').on('input',function(e){
         clearFields();
     });
-    
+
     $('#searchPluginButton').click(function(){
-        
-        $('#pleaseWaitDialog').modal(); 
+
+        $('#pleaseWaitDialog').modal();
         urlValue = $('#object_url').val();
         var searchPlugin = #{jsRoute @searchPlugin() /};
-        
+
         $.ajax({
             url: searchPlugin.url(),
             type: searchPlugin.method,
             data:{ url: urlValue}
            })
-        .done(function(data) { 
-            flashSuccess("&{'plugin.found'}");    
+        .done(function(data) {
+            flashSuccess("&{'plugin.found'}");
             $('#object_name').val(data['name']);
             $('#object_pluginVersion').val(data['pluginVersion']);
             $('#object_cloudType').val(data['cloudType']);
@@ -114,7 +106,7 @@ $(function(){
             flashError(data.responseText);
         })
         .always(function() {
-            $('#pleaseWaitDialog').modal('hide');     
+            $('#pleaseWaitDialog').modal('hide');
         });
 
     });
