--- a/projects/web/app/views/guest/CredentialController/blank.html
+++ b/projects/web/app/views/guest/CredentialController/blank.html
@@ -3,15 +3,13 @@
 #{set title:messages.get('crud.blank.title', type.modelName) /}
 
 <div class="row crud-title">
-    <div class="col-xs-12 col-sm-12 col-md-12">  
-        <h1> &{'crud.blank.title', type.modelName} </h1>
-        <pre> &{'crud.blank.title.desc', type.modelName} </pre>
-    </div>
+    <h1 class="col-xs-12"> &{'crud.blank.title', type.modelName} </h1>
+    <pre class="col-xs-12"> &{'crud.blank.title.desc', type.modelName} </pre>
 </div>
 
 <br>
 
-<div class="row col-lg-12" >
+<div class="row" >
 #{form action:@create(), enctype:'multipart/form-data', class: 'submitForm'}
 
     #{crud.form}
@@ -25,39 +23,39 @@
                     <a class="check-all ${field.id}_class_all_"></a>
                 </div>
                 <div class="custom-muilt-check-box">
-                    %{ 
-                    
-                    fieldChoices = models.GroupModel.searchUserGroups();                    
-                    fieldChoices.each() { 
+                    %{
+
+                    fieldChoices = models.GroupModel.searchUserGroups();
+                    fieldChoices.each() {
                         selected = (object.listSharedGroups != null && object.listSharedGroups.contains(it));
                     }%
                     <div style="padding-top: 5px;padding-bottom: 5px;">
-                        <input type="checkbox" name="${field.name}.id" value="${it._key()}" ${selected ? 'checked'.raw() : ''} 
+                        <input type="checkbox" name="${field.name}.id" value="${it._key()}" ${selected ? 'checked'.raw() : ''}
                             class="icheck icheckbox_table_list ${field.id}_class_one_"/>&nbsp;${it}<br/>
                     </div>
                     %{ } }%
-                </div>            
-                 
+                </div>
+
                 #{set 'tempInnerScript' }
                 <script type="text/javascript">
                     configureCheckAll(
-                            $('.${field.id}_class_all_'), 
+                            $('.${field.id}_class_all_'),
                             $('.${field.id}_class_one_'));
-                </script>        
+                </script>
                 #{/set}
-                
+
                 #{set 'moreInnerScripts'}
                     #{get 'moreInnerScripts' /}
                     #{get 'tempInnerScript' /}
-                #{/set} 
+                #{/set}
                 #{ifError field.name}
                     <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
                 #{/ifError}
-            </div>             
+            </div>
             #{/field}
         #{/crud.custom}
     #{/crud.form}
-    
+
     <div class="btn-row text-center">
         <button class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_save">&{'crud.save'}</button>
         <button class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_saveAndContinue">&{'crud.saveAndContinue'}</button>
