--- a/projects/web/app/views/guest/CredentialController/show.html
+++ b/projects/web/app/views/guest/CredentialController/show.html
@@ -3,23 +3,15 @@
 #{set title:messages.get('crud.show.title', type.modelName) /}
 
 <div class="row crud-title">
-    <div class="">  
-        <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="row">
-                <h1> &{'crud.show.title', type.modelName} </h1>
-            </div>
-            
-            <div class="row">
-                <pre class="col-xs-12 col-sm-12 col-md-9"> &{'crud.show.title.desc', type.modelName} </pre>            
-                <input data-toggle="modal" data-target="#deleteModal" class="col-xs-12 col-sm-12 col-md-2 btn btn-danger pull-right" type="button" value="&{'crud.delete', type.modelName}" />
-            </div>
-        </div>
-    </div>
+    <h1 class="col-xs-12"> &{'crud.show.title', type.modelName} </h1>
+    <pre class="col-xs-12 col-sm-12 col-md-9"> &{'crud.show.title.desc', type.modelName} </pre>
+    <input data-toggle="modal" data-target="#deleteModal"
+        class="col-xs-12 col-sm-12 col-md-2 btn btn-danger pull-right" type="button" value="&{'crud.delete', type.modelName}" />
 </div>
 
 <br>
 
-<div class="row col-lg-12" >
+<div class="row" >
 #{form action:@save(object._key()), enctype:'multipart/form-data', class: 'submitForm'}
 
     #{crud.form}
@@ -33,43 +25,43 @@
                     <a class="check-all ${field.id}_class_all_"></a>
                 </div>
                 <div class="custom-muilt-check-box">
-                    %{ 
-                    
-                    fieldChoices = models.GroupModel.searchUserGroups();                    
-                    fieldChoices.each() { 
+                    %{
+
+                    fieldChoices = models.GroupModel.searchUserGroups();
+                    fieldChoices.each() {
                         selected = (object.listSharedGroups != null && object.listSharedGroups.contains(it));
                     }%
                     <div style="padding-top: 5px;padding-bottom: 5px;">
-                        <input type="checkbox" name="${field.name}.id" value="${it._key()}" ${selected ? 'checked'.raw() : ''} 
+                        <input type="checkbox" name="${field.name}.id" value="${it._key()}" ${selected ? 'checked'.raw() : ''}
                             class="icheck icheckbox_table_list ${field.id}_class_one_"/>&nbsp;${it}<br/>
                     </div>
                     %{ } }%
-                </div>            
-                 
+                </div>
+
                 #{set 'tempInnerScript' }
                 <script type="text/javascript">
                     configureCheckAll(
-                            $('.${field.id}_class_all_'), 
+                            $('.${field.id}_class_all_'),
                             $('.${field.id}_class_one_'));
-                </script>        
+                </script>
                 #{/set}
-                
+
                 #{set 'moreInnerScripts'}
                     #{get 'moreInnerScripts' /}
                     #{get 'tempInnerScript' /}
-                #{/set} 
+                #{/set}
                 #{ifError field.name}
                     <span id="helpBlock2" class="help-block">${field.error.raw()}</span>
                 #{/ifError}
-            </div>             
+            </div>
             #{/field}
         #{/crud.custom}
     #{/crud.form}
-    
-    <div class="btn-row text-center">        
+
+    <div class="btn-row text-center">
         <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_save" value="&{'crud.save', type.modelName}" />
         <input class="btn btn-primary btn-md btn-mobile margin-bottom" type="submit" name="_saveAndContinue" value="&{'crud.saveAndContinue', type.modelName}" />
-        <a href="@{guest.VwCredentialController.list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>     
+        <a href="@{guest.VwCredentialController.list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>
     </div>
 #{/form}
 </div>
@@ -86,7 +78,7 @@
                 <p class="text-warning"><small>&{'modal.confirm.delete.desc'}</small></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>                
+                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>
                 #{form @delete(object._key()), style: 'display:inline;', class: 'submitForm'}
                     <button type="submit" class="btn btn-primary">&{'modal.button.confirm'}</button>
                 #{/form}
