--- a/projects/web/app/views/guest/UserGroupController/list.html
+++ b/projects/web/app/views/guest/UserGroupController/list.html
@@ -3,34 +3,32 @@
 #{set title:messages.get('crud.list.title', type.name) /}
 
 <div class="row crud-title">
-    <div class="col-xs-12 col-sm-12 col-md-12">  
-        <h1> &{'crud.list.title', type.name} </h1>
-        <pre> &{'crud.list.title.desc', type.name+'.desc'} </pre>
-    </div>
+    <h1 class="col-xs-12"> &{'crud.list.title', type.name} </h1>
+    <pre class="col-xs-12"> &{'crud.list.title.desc', type.name+'.desc'} </pre>
 </div>
 
 <br>
 
 <div class=row>
-    <div class="col-xs-12 col-sm-12 col-md-8 margin-bottom">
+    <div class="col-xs-12 col-sm-12 col-md-7 margin-bottom no-bootstrap-padding">
         #{form action:@list().remove('page'), method:'GET', id:'searchForm', class: 'submitForm'}
             #{if _fields}
                 <input type="hidden" name="searchFields" value="${_fields.toString().substring(1, _fields.toString().length()-1).replace(',', '')}" />
             #{/if}
-            <input type="text" class="form-control btn-buscar" placeholder="&{'crud.search'}" name="search" value="${params.search?.escape()?.raw()}" /> 
+            <input type="text" class="form-control btn-buscar" placeholder="&{'crud.search'}" name="search" value="${params.search?.escape()?.raw()}" />
         #{/form}
         #{if totalCount > 0 && params.search}
             <div class="list-total-count">
                 (<a href="@{list()}">&{'crud.list.totalSize', totalCount}</a>)
             </div>
-        #{/if} 
+        #{/if}
     </div>
-    
-    <div class="row col-xs-12 col-sm-12 col-md-4">    
-        <button class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-4" type="button" onclick="javascript: block('&{'crud.wait'}');">&{'crud.search'}</button>    
+
+    <div class="row col-xs-12 col-sm-12 col-md-4 pull-right no-bootstrap-padding">
+        <button class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-4" type="button" onclick="javascript: block('&{'crud.wait'}');">&{'crud.search'}</button>
         <input class="btn btn-primary margin-bottom col-xs-12 col-sm-12 col-md-7 pull-right" type="button" onclick="javascript: location.href = '@{guest.GroupController.blank()}'; block('&{'crud.wait'}');" value="&{'crud.add', type}">
     </div>
-    
+
 </div>
 
 <br>
