--- a/projects/web/app/views/adm/ImageController/list.html
+++ b/projects/web/app/views/adm/ImageController/list.html
@@ -3,10 +3,8 @@
 #{set title:messages.get('crud.list.title', type.name) /}
 
 <div class="row crud-title">
-    <div class="col-xs-12 col-sm-12 col-md-12">  
-        <h1> &{'crud.list.title', type.name} </h1>
-        <pre> &{'crud.list.title.desc', type.name+'.desc'} </pre>
-    </div>
+    <h1 class="col-xs-12"> &{'crud.list.title', type.name} </h1>
+    <pre class="col-xs-12"> &{'crud.list.title.desc', type.name+'.desc'} </pre>
 </div>
 
 <br>
@@ -20,3 +18,5 @@
         ${object.plugin.name}
     #{/crud.custom}
 #{/crud.table}
+
+#{crud.pagination /}
