--- a/projects/web/app/views/guest/InstanceController/show.html
+++ b/projects/web/app/views/guest/InstanceController/show.html
@@ -3,104 +3,96 @@
 #{set title:messages.get('crud.show.title', type.modelName) /}
 
 <div class="row crud-title">
-    <div class="">  
-        <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="row">
-                <h1> &{'crud.show.title', type.modelName} </h1>
-            </div>
-            
-            <div class="row">
-                <pre class="col-xs-12 col-sm-12 col-md-9"> &{'crud.show.title.desc', type.modelName} </pre>            
-                <input data-toggle="modal" data-target="#deleteModal" class="col-xs-12 col-sm-12 col-md-2 btn btn-danger pull-right" type="button" value="&{'crud.delete', type.modelName}" />
-            </div>
-        </div>
-    </div>
+    <h1 class="col-xs-12"> &{'crud.show.title', type.modelName} </h1>
+    <pre class="col-xs-12 col-sm-12 col-md-9"> &{'crud.show.title.desc', type.modelName} </pre>
+    <input data-toggle="modal" data-target="#deleteModal"
+        class="col-xs-12 col-sm-12 col-md-2 btn btn-danger pull-right" type="button" value="&{'crud.delete', type.modelName}" />
 </div>
 
 <br>
 
-<div class="row col-lg-12" >
+<div class="row" >
     #{field 'object.executor' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
-    #{/field}    
+    #{/field}
     #{field 'object.cloudInstanceName' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.creationDate' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
-    #{/field}    
+    #{/field}
     #{field 'object.cloudInstanceIp' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.plugin' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.credentialUsage' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="&{field.value}"/>
         </div>
-    #{/field}    
+    #{/field}
     #{field 'object.price' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.priceTableDate' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.regionName' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.zoneName' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.typeName' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.cores' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
     #{field 'object.memory' }
         <div class="form-group row">
-            <label for="${field.id}">&{field.name}</label>                
+            <label for="${field.id}">&{field.name}</label>
             <input id="${field.id}" class="form-control" readonly type="text" name="${field.name}" value="${field.value}"/>
         </div>
     #{/field}
-    
-    <div class="btn-row text-center">        
-        <a href="@{list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>     
+
+    <div class="btn-row text-center">
+        <a href="@{list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>
     </div>
 </div>
 
@@ -116,7 +108,7 @@
                 <p class="text-warning"><small>&{'modal.confirm.delete.desc'}</small></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>                
+                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>
                 #{form @delete(object._key()), style: 'display:inline;', class: 'submitForm'}
                     <button type="submit" class="btn btn-primary">&{'modal.button.confirm'}</button>
                 #{/form}
