--- a/projects/web/app/views/guest/VwCredentialController/show.html
+++ b/projects/web/app/views/guest/VwCredentialController/show.html
@@ -3,26 +3,18 @@
 #{set title:messages.get('crud.view.title', type.modelName) /}
 
 <div class="row crud-title">
-    <div class="">  
-        <div class="col-xs-12 col-sm-12 col-md-12">
-            <div class="row">
-                <h1> &{'crud.view.title', type.modelName} </h1>
-            </div>
-            
-            <pre class="col-xs-12"> &{'crud.view.title.desc', type.modelName} </pre>            
-                
-        </div>
-    </div>
+    <h1 class="col-xs-12"> &{'crud.view.title', type.modelName} </h1>
+    <pre class="col-xs-12"> &{'crud.view.title.desc', type.modelName} </pre>
 </div>
 
 <br>
 
-<div class="row col-lg-12" >
+<div class="row" >
 #{form action:@save(object._key()), enctype:'multipart/form-data', class: 'submitForm'}
 
     #{crud.form}
         #{crud.custom 'userShared'}
-            #{field 'object.listSharedGroups'}            
+            #{field 'object.listSharedGroups'}
             <div class="form-group row ${field.errorClass ? 'has-error' : ''}">
                     <div class="div-label">
                         <label for="${field.id}">
@@ -31,21 +23,21 @@
                         <a class="check-all ${field.id}_class_all_"></a>
                     </div>
                     <div class="custom-muilt-check-box">
-                        %{ 
-                        field.value.each() { 
+                        %{
+                        field.value.each() {
                         }%
                         <div style="padding-top: 5px;padding-bottom: 5px;">
                             <input checked disabled type="checkbox" class="icheck"/>&nbsp;${it}<br/>
                         </div>
                         %{ } }%
-                    </div>          
-            </div>                  
-            #{/field}           
+                    </div>
+            </div>
+            #{/field}
         #{/crud.custom}
     #{/crud.form}
-    
-    <div class="btn-row text-center">        
-        <a href="@{list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>     
+
+    <div class="btn-row text-center">
+        <a href="@{list()}" class="btn btn-primary btn-md btn-mobile margin-bottom">&{'crud.cancel'}</a>
     </div>
 #{/form}
 </div>
@@ -62,7 +54,7 @@
                 <p class="text-warning"><small>&{'modal.confirm.delete.desc'}</small></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>                
+                <button type="button" class="btn btn-default" data-dismiss="modal">&{'modal.button.cancel'}</button>
                 #{form @delete(object._key()), style: 'display:inline;', class: 'submitForm'}
                     <button type="submit" class="btn btn-primary">&{'modal.button.confirm'}</button>
                 #{/form}
@@ -77,7 +69,7 @@ $(function(){
     $('#object_name').prop('readonly', true);
     $('#object_plugin').prop('tabindex', -1);
     $('#object_plugin').attr('readonly', 'readonly');
-    $('#object_enabled').iCheck('disable');    
+    $('#object_enabled').iCheck('disable');
 });
 </script>
 #{/set}
